--- a/about-us.html
+++ b/about-us.html
@@ -83,7 +83,7 @@
                     <ul class="top-links list-unstyled text-right">
                         <li class="top-contact">
                             <ol class="list-inline">
-                                <li><i class="fa fa-phone"></i> : +91 22 28246841 / 42</li>
+                                <li><i class="fa fa-phone"></i> : +91-7666777448</li>
                                 <li><i class="fa fa-envelope-o"></i> : <a href="mailto:info@jemlogisticssolutions.com">info@jemlogisticssolutions.com</a></li>
                             </ol>
                         </li>
@@ -289,8 +289,7 @@
 								Ground Floor, Marol Pipeline Road, <br/>
 								Andheri (East), Mumbai - 400059
 								<br>
-								<i class="fa fa-phone"></i>&nbsp; +91 22 28246841 / 42 <br>
-								<i class="fa fa-fax"></i>&nbsp; +91 22 28246843 <br>
+								<i class="fa fa-phone"></i>&nbsp; +91-7666777448 <br>
 								<i class="fa fa-envelope-o"></i>&nbsp;
 								<a href="mailto:info@jemlogisticssolutions.com">info@jemlogisticssolutions.com</a>
 							</p>
