--- a/index.html
+++ b/index.html
@@ -424,6 +424,24 @@
             </Div>
         </Div>
     </div>
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cookie Consent</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div id="cookie-consent-banner" class="cookie-consent-banner">
+        <p>We use cookies to improve your experience. By using our site, you agree to our use of cookies. <a href="#">Learn more</a></p>
+        <button id="accept-cookies">Accept</button>
+        <button id="decline-cookies">Decline</button>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
+
 	
 	
 
