--- a/contact-us.html
+++ b/contact-us.html
@@ -200,7 +200,7 @@
                         <div class="col-md-12">
                             <div class="contact-details">
                                 <div class="map">
-									<iframe src="https://www.google.com/maps/place/JEM+LOGISTICS+SOLUTIONS/@19.106666,72.8684053,15z/data=!4m6!3m5!1s0x3be7c9d390017d53:0x842d56a418613eae!8m2!3d19.106666!4d72.8684053!16s%2Fg%2F11h6x59sys?hl=en&entry=ttu&g_ep=EgoyMDI0MDgyMy4wIKXMDSoASAFQAw%3D%3D"></iframe>
+									<iframe src="https://maps.app.goo.gl/nL7VpzQTgZ8mppDB9"></iframe>
 								</div>
                             </div>
                         </div>
