--- a/contact-us.html
+++ b/contact-us.html
@@ -200,7 +200,7 @@
                         <div class="col-md-12">
                             <div class="contact-details">
                                 <div class="map">
-									<iframe src="https://maps.app.goo.gl/nL7VpzQTgZ8mppDB9"></iframe>
+									<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15080.090258864497!2d72.8684053!3d19.106666!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c9d390017d53%3A0x842d56a418613eae!2sJEM%20LOGISTICS%20SOLUTIONS!5e0!3m2!1sen!2sin!4v1724848863586!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 								</div>
                             </div>
                         </div>
