--- a/contact-us.html
+++ b/contact-us.html
@@ -362,7 +362,7 @@
         </div>
         <div class="bottom-footer">
             <div class="container text-center">
-				<p>Copyright © 2016 JEM Logistics Solutions. All rights reserved. | Site by <a href="http://webvriksha.com/" target="_blank">WebVriksha.com</a></p>
+				<p>Copyright © 2024 JEM Logistics Solutions. All rights reserved. | Site by JEM LOGISTICS TEAMS MEMBERS</a></p>
             </div>
         </div>
     </div>
